--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ build = "build.rs"
 raw-window-handle = "0.6.2"
 slint = "1.9.2"
 wayland-client = "0.31.7"
+wayland-protocols-wlr = "0.3.5"
 
 [build-dependencies]
 slint-build = "1.9.2"
