--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ raw-window-handle = "0.6.2"
 slint = "1.9.2"
 wayland-client = "0.31.7"
 wayland-protocols-wlr = "0.3.5"
+once_cell = "1.20.2"
 
 [build-dependencies]
 slint-build = "1.9.2"
