--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,24 +2,26 @@
 name = "surfboard"
 version = "1.0.0"
 edition = "2021"
-build = "build.rs"
+
 
 [dependencies]
 env_logger = "0.11.6"
 log = "0.4.22"
-tokio = "1.42.0"
-raw-window-handle = "0.6.2"
-slint = "1.9.2"
-wayland-client = "0.31.7"
-wayland-protocols-wlr = "0.3.5"
-once_cell = "1.20.2"
+#eframe = "0.30.0"
+#egui = "0.30.0"
+#egui_extras = "0.30.0"
+iced = "0.13.1"
+iced_layershell = "0.13.2"
 
-[build-dependencies]
-slint-build = "1.9.2"
 
 [features]
 default = [
-    "tokio/full",
-    "slint/default",
-    "slint/raw-window-handle-06",
+ #   "eframe/wayland",
+ #   "egui_extras/image",
     ]
+
+
+# bleeding edge version of egui and eframe:
+[patch.crates-io]
+#egui = { git = "https://github.com/emilk/egui", branch = "master" }
+#eframe = { git = "https://github.com/emilk/egui", branch = "master" }
