--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,10 @@ edition = "2021"
 [dependencies]
 env_logger = "0.11.6"
 log = "0.4.22"
-#eframe = "0.30.0"
-#egui = "0.30.0"
-#egui_extras = "0.30.0"
 iced = "0.13.1"
 iced_layershell = "0.13.2"
+iced_aw = "0.11.0"
+#iced_fonts = "0.1.1"
 
 
 [features]
