--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "surfboard"
-version = "1.0.0"
+version = "0.1.0"
 edition = "2021"
 
 
@@ -9,7 +9,7 @@ env_logger = "0.11.6"
 log = "0.4.22"
 iced = "0.13.1"
 iced_layershell = "0.13.2"
-iced_aw = "0.11.0"
+#iced_aw = "0.11.0"
 #iced_fonts = "0.1.1"
 
 
