--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ env_logger = "0.11.6"
 log = "0.4.22"
 iced = "0.13.1"
 iced_layershell = "0.13.2"
+iced_graphics = "0.13.0"
+iced_renderer = "0.13.0"
 
 
 [features]
