--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ iced = "0.13.1"
 iced_layershell = "0.13.2"
 iced_graphics = "0.13.0"
 iced_renderer = "0.13.0"
+iced_runtime = "0.13.2"
 
 
 [features]
