--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ iced_graphics = "0.13.0"
 iced_renderer = "0.13.0"
 iced_runtime = "0.13.2"
 applications = "0.2.3"
+ini = "1.3.0"
+walkdir = "2.5.0"
+xdg = "2.5.2"
 
 
 [features]
