--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,15 @@
 [package]
 name = "surfboard"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
+
+
+# https://github.com/johnthagen/min-sized-rust
+[profile.release]
+strip = true
+lto = true
+codegen-units = 1
+panic = "abort"
 
 
 [dependencies]
